feat: add an option to save chart & logs to file