@@ -3,7 +3,6 @@ package org.example.ui;
 import org.example.domain.model.City;
 import org.example.domain.model.Tour;
 import org.jfree.chart.ChartFactory;
-import org.jfree.chart.ChartPanel;
 import org.jfree.chart.JFreeChart;
 import org.jfree.chart.plot.PlotOrientation;
 import org.jfree.chart.plot.XYPlot;
@@ -11,40 +10,25 @@ import org.jfree.chart.renderer.xy.XYLineAndShapeRenderer;
 import org.jfree.data.xy.XYSeries;
 import org.jfree.data.xy.XYSeriesCollection;
 
-import javax.swing.JFrame;
-import java.awt.Dimension;
-import java.awt.Color;
 import java.awt.BasicStroke;
-import javax.swing.SwingUtilities;
+import java.awt.Color;
 import java.util.List;
 
-public class TspVisualizer extends JFrame {
+public class DefaultChartCreator implements ChartCreator {
 
-    public TspVisualizer(Tour tour, String title) {
-        super(title);
-
-        JFreeChart chart = createChart(tour);
-        ChartPanel chartPanel = new ChartPanel(chart);
-        chartPanel.setPreferredSize(new Dimension(800, 600));
-
-        setContentPane(chartPanel);
-        pack();
-        setLocationRelativeTo(null);
-        setDefaultCloseOperation(JFrame.DISPOSE_ON_CLOSE);
-    }
-
-    private JFreeChart createChart(Tour tour) {
+    @Override
+    public JFreeChart createChart(Tour tour) {
         XYSeriesCollection dataset = createDataset(tour);
 
         JFreeChart chart = ChartFactory.createXYLineChart(
-            "TSP Solution - Tour length: " + String.format("%.2f", tour.getTotalDistance()),
-            "X",
-            "Y",
-            dataset,
-            PlotOrientation.VERTICAL,
-            true,
-            true,
-            false
+                "TSP Solution - Tour length: " + String.format("%.2f", tour.getTotalDistance()),
+                "X",
+                "Y",
+                dataset,
+                PlotOrientation.VERTICAL,
+                true,
+                true,
+                false
         );
 
         XYPlot plot = chart.getXYPlot();
@@ -75,14 +59,13 @@ public class TspVisualizer extends JFrame {
         XYSeries routeSeries = new XYSeries("Route", false);
         XYSeries citySeries = new XYSeries("Cities", false);
 
-        for (int i = 0; i < cities.size(); i++) {
-            City city = cities.get(i);
+        for (City city : cities) {
             routeSeries.add(city.getX(), city.getY());
             citySeries.add(city.getX(), city.getY());
         }
 
         if (!cities.isEmpty()) {
-            City firstCity = cities.get(0);
+            City firstCity = cities.getFirst();
             routeSeries.add(firstCity.getX(), firstCity.getY());
         }
 
@@ -91,12 +74,5 @@ public class TspVisualizer extends JFrame {
         dataset.addSeries(citySeries);
 
         return dataset;
-    }
-
-    public static void displayTour(Tour tour, String title) {
-        SwingUtilities.invokeLater(() -> {
-            TspVisualizer visualizer = new TspVisualizer(tour, title);
-            visualizer.setVisible(true);
-        });
     }
 }
